# EllipticZero

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  EVALUATION.md  LICENSE  LICENSE_FAQ.md  LICENSE_TRANSITION.md  NOTICE  README.md  README.ru.md  REPORT_SPEC.md  REPRODUCIBILITY.md  SECURITY.md  TRADEMARKS.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: codeql.yml  tests.yml
app/: __init__.py  config.py  logger.py  main.py  platform_paths.py  types.py
app/agents/: __init__.py  base.py  critic_agent.py  cryptography_agent.py  hypothesis_agent.py  math_agent.py  report_agent.py  strategy_agent.py
app/cli/: __init__.py  i18n.py  interactive.py  interactive_support.py  text_rendering.py  ui.py
app/compute/: __init__.py  executor.py
app/core/: __init__.py  benchmark_scorecard.py  comparison.py  doctor.py  experiment_packs.py  filtering.py  golden_cases.py  lifecycle.py  manifest_helpers.py  orchestrator.py  planning_helpers.py  scoring.py  (+10 more)
configs/: settings.yaml
docs/: CASE_STUDY_SMARTBUGS.md  ENVIRONMENT_PROFILES.md  INDEX.md  USE_CASES.md
examples/: README.md  README.ru.md  SAMPLE_OUTPUTS.md  SAMPLE_OUTPUTS.ru.md
scripts/: bootstrap_smart_contract_toolchain.py  release_gate.py  setup_local_lab.bat  setup_local_lab.ps1  setup_local_lab.sh  validate_smartbugs_subset.py
tests/: test_advanced_math_tools.py  test_agent_context.py  test_benchmark_scorecard.py  test_comparative_reporting.py  test_config_routing.py  test_doctor.py  test_ecc_tools.py  test_experiment_packs.py  test_exploratory_mode.py  test_external_validation.py  test_golden_cases.py  test_hosted_providers.py  test_interactive_cli.py  test_interactive_contract_input.py  test_live_smoke_cli.py  test_local_tools.py  test_plugins.py  test_provider_privacy.py  test_release_gate.py  test_replay.py  test_report_markdown_export.py  test_reproducibility_bundle.py  test_routing_cli.py  test_sandbox_executor.py  test_sarif_export.py  test_seed_filtering.py  test_smart_contract_tools.py  test_smoke.py  test_synthetic_targets.py  test_threat_intel.py
(+132 files in other folders)
